ui/index.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    top: 0;
    left: 0;
    overflow: hidden;
    background-color: #222;
    position: fixed;
    width: 100%;
}
li {
    float: left;
}
li a{
    display: block;
    color: white;
    text-align: center;
    padding: 14px 14px;
    text-decoration: none;
    font-family: monospace;
}
li a:hover {
    background-color: #000;
}
.active {
    background-color: #639;
}

h1 {
    text-align: center;
    color: #CCC;
}

#search_div {
    margin: auto; 
    text-align: center;
    width: 75%;
}

#search_bar {
    
    width: 100%;
    height: 40px;
    background: #333;
    border-radius: 5px;
    color: #CCC;
    padding-left: 10px;
    padding-right: 10px; 

}

body {
    background: #111;
}

#container {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 40%;
    /*vertical-align: middle;*/
    /*-ms-transform: translateY(-50%);
    transform: translateY(-50%);*/
}

